[package]
name = "pallet-sidechain"
description = "Pallet for integritee sidechains"
version = "0.11.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "MS-RSL"
edition = "2021"

[dependencies]
codec = { version = "3.6.1", default-features = false, features = ["derive"], package = "parity-scale-codec" }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.171", features = ["derive"], optional = true }

# local
enclave-bridge-primitives = { path = "../primitives/enclave-bridge", default-features = false }
pallet-enclave-bridge = { path = "../enclave-bridge", default-features = false }
pallet-teerex = { path = "../teerex", default-features = false }
sidechain-primitives = { path = "../primitives/sidechain", default-features = false }

# substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# benchmarking
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
hex-literal = { version = "0.3.2", optional = true }
pallet-balances = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
teerex-primitives = { path = "../primitives/teerex", default-features = false }
test-utils = { path = "../test-utils", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.9.0"
externalities = { package = "sp-externalities", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
hex-literal = "0.3.2"
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "codec/std",
    "enclave-bridge-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-enclave-bridge/std",
    "pallet-teerex/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "serde",
    "sidechain-primitives/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "teerex-primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal",
    "pallet-balances",
    "pallet-timestamp/runtime-benchmarks",
    "test-utils",
]

try-runtime = ["frame-support/try-runtime"]
