[package]
name = "pallet-sidechain"
description = "Pallet for integritee sidechains"
version = "0.11.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "MS-RSL"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, features = ["full"] }
log = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# local
enclave-bridge-primitives = { path = "../primitives/enclave-bridge", default-features = false }
pallet-enclave-bridge = { path = "../enclave-bridge", default-features = false }
pallet-teerex = { path = "../teerex", default-features = false }
sidechain-primitives = { path = "../primitives/sidechain", default-features = false }

# substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex-literal ={ workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
teerex-primitives = { path = "../primitives/teerex", default-features = false }
test-utils = { path = "../test-utils", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
externalities = { workspace = true }
frame-benchmarking = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
test-utils = { path = "../test-utils" }

[features]
default = [ "std" ]
std = [
	"enclave-bridge-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-enclave-bridge/std",
	"pallet-teerex/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sidechain-primitives/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"teerex-primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"hex-literal",
	"pallet-balances",
	"pallet-timestamp/runtime-benchmarks",
	"test-utils",
	"pallet-enclave-bridge/runtime-benchmarks",
	"pallet-teerex/runtime-benchmarks"
]

try-runtime = [
	"frame-support/try-runtime",
	"pallet-enclave-bridge/try-runtime",
	"pallet-teerex/try-runtime"
]
