[package]
name = "pallet-teeracle"
description = "A pallet to store cryptocurrency market data"
version = "0.1.0"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/teeracle/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# local
pallet-teerex = { path = "../teerex", default-features = false }
teeracle-primitives = { path = "../primitives/teeracle", default-features = false }

# encointer
substrate-fixed = { tag = "v0.5.9", default-features = false, git = "https://github.com/encointer/substrate-fixed.git" }

# substrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"  }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }

# benchmarking
frame-benchmarking = {default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
hex-literal = { version = "0.3.2", optional = true }
test-utils = { path = "../test-utils", optional = true, default-features = false }
timestamp = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", package = "pallet-timestamp" }

[dev-dependencies]
externalities = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", package = "sp-externalities" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
hex-literal = "0.3.2"
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
test-utils = { path = "../test-utils" }
timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", package = "pallet-timestamp" }


[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    # local
    "pallet-teerex/std",
    "teeracle-primitives/std",
    # encointer
    "substrate-fixed/std",
    # substrate
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal",
    "test-utils",
    "timestamp/runtime-benchmarks"
]
