[package]
name = "pallet-teeracle"
description = "A pallet to store cryptocurrency market data"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# local
pallet-teerex = { path = "../teerex", default-features = false }
teeracle-primitives = { path = "../primitives/teeracle", default-features = false }
teerex-primitives = { path = "../primitives/teerex", default-features = false }

# encointer
substrate-fixed = { tag = "v0.5.9", default-features = false, git = "https://github.com/encointer/substrate-fixed.git" }

# substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
test-utils = { path = "../test-utils", optional = true }
timestamp = { workspace = true, optional = true }

[dev-dependencies]
externalities = { workspace = true }
frame-benchmarking = { workspace = true }
hex-literal = { workspace = true }
sp-keyring = { workspace = true }
pallet-balances = { workspace = true }
test-utils = { path = "../test-utils" }
timestamp = { workspace = true }


[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-teerex/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "substrate-fixed/std",
    "teeracle-primitives/std",
    "teerex-primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "hex-literal",
    "test-utils",
    "timestamp/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
