[package]
name = "test-utils"
description = "A crate for common utilities for tests"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { workspace = true }

sgx-verify = { default-features = false, features = ["test-data"], path = "../teerex/sgx-verify" }
teerex-primitives = { default-features = false, path = "../primitives/teerex" }

[features]
default = ['std']
std = [
    "log/std",
    "sgx-verify/std",
    "teerex-primitives/std",
]
