[package]
name = "pallet-xcm-transactor"
description = "A pallet which can send various transact messages"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "(GPL-3.0-only)"
edition = "2021"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Local
xcm-transactor-primitives = { default-features = false, path = "../primitives/xcm-transactor", features = ["dot", "ksm"] }

# substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# xcm/polkadot
staging-xcm = { workspace = true }

# cumulus
cumulus-primitives-core = { workspace = true }

[dev-dependencies]
sp-externalities = { workspace = true }
frame-benchmarking = { workspace = true }
hex-literal = { workspace = true }
pallet-balances = { workspace = true }
test-utils = { path = "../test-utils" }
sp-keyring = { workspace = true }

# Re-introduce subxt whe we need it, maintaining it is a pain.
# Remove unnecessary wasm stuff by disabling default features, also it lead
# to a linker issue once: https://github.com/integritee-network/pallets/pull/159.
# subxt = { version = "0.29.0", default-features = false }


[features]
default = ["std"]
std = [
    "cumulus-primitives-core/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm-transactor-primitives/std",
    "staging-xcm/std",
    "pallet-balances/std",
    "sp-externalities/std",
    "sp-keyring/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "cumulus-primitives-core/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "staging-xcm/runtime-benchmarks",
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "sp-runtime/try-runtime",
]
