[package]
name = "claims-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive"] }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.13", default-features = false }

# substrate dependencies
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["std"]
no_std = []
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "rustc-hex/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "serde/std",
]
