[package]
name = "claims-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.171", default-features = false, optional = true, features = ["alloc", "derive"] }

# substrate dependencies
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
serde_derive = ["serde"]
std = [
    "parity-scale-codec/std",
    "rustc-hex/std",
    "scale-info/std",
    "serde/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
