[package]
name = "claims-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
parity-scale-codec = { workspace = true }
rustc-hex = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# substrate dependencies
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
serde_derive = ["serde"]
std = [
    "parity-scale-codec/std",
    "rustc-hex/std",
    "scale-info/std",
    "serde/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
