[package]
name = "teeracle-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
# local
common-primitives = { path = "../common", default-features = false }

# encointer
substrate-fixed = { workspace = true }

# substrate
sp-std = { workspace = true }


[features]
default = ["std"]
std = [
    "common-primitives/std",
    "sp-std/std",
    "substrate-fixed/std",
]
