[package]
name = "teerex-primitives"
version = "0.1.0"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.13", default-features = false }

# local
ias-verify = { path = "../../teerex/ias-verify", default-features = false }

# substrate dependencies
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde/std",
    # local
    "ias-verify/std",
    # substrate
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
]
