[package]
name = "teerex-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
codec = { version = "3.6.1", default-features = false, features = ["derive"], package = "parity-scale-codec" }
common-primitives = { path = "../common", default-features = false }
derive_more = "0.99.16"
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.13", default-features = false }

# substrate dependencies
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
std = [
    "codec/std",
    "common-primitives/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
