[package]
name = "teerex-primitives"
version = "0.1.0"
authors = ["Integritee AG <hello@integritee.network>"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
common-primitives = { path = "../common", default-features = false }
derive_more = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

# substrate dependencies
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
    "common-primitives/std",
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
